Fix scrollbar issue for layout

--- a/src/Styles/App.scss
+++ b/src/Styles/App.scss
@@ -1,5 +1,5 @@
 .App {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   color: #C8CEDA;
   font-family: "Euclid Circular B";
